@@ -1,3 +1,11 @@
+From: J. R. Okajima <hooanon05@yahoo.co.jp>
+Date: Fri May 10 00:27:35 2013 +0900
+Subject: aufs3.x-rcN standalone patch
+Origin: http://sourceforge.net/p/aufs/aufs3-standalone/ci/4f14cef47eb7c23eda7198931fbab1040866b6ee/tree/
+Bug-Debian: http://bugs.debian.org/541828
+
+Patch headers added by debian/patches/features/all/aufs3/gen-patch
+
 aufs3.x-rcN standalone patch
 
 diff --git a/fs/file_table.c b/fs/file_table.c
