@@ -3,6 +3,7 @@ linux (3.10~rc7-1~exp2) UNRELEASED; urgency=low
   * cassini: Make missing firmware non-fatal (Closes: #714128)
   * debian/patches: Add DEP-5 headers (From, Subject, Forwarded/Origin)
     for most patches
+  * aufs: Add DEP-5 headers to generated/copied headers
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 01 Jul 2013 00:58:08 +0100
 
